# at3-model-experimentation

./: .gitignore  Makefile  README.md  pyproject.toml
ada_app/: ada_app.py
data/processed/: cabin.joblib  origin.joblib
docs/: mkdocs.yml
docs/docs/: index.md
models/: ElasticNet_best_model.joblib  HistGradientBoosting_best_model.joblib  LightGBM_best_model.txt  Thuso_24667610_cabin_type_label_encoder.pkl  Thuso_24667610_xgboost_model.pkl  XGBoost_best_model.joblib  cabin_type_label_encoder.pkl  departure_date_label_encoder.pkl  departure_time_HHMM_label_encoder.pkl  origin_airport_label_encoder.pkl  origin_encoder.joblib  rf_model.pkl
models/mappings/: airport_label_mappings.joblib  departure_date_label_encoder.pkl  departure_time_HHMM_label_encoder.pkl  origin_airport_label_encoder.pkl
models/transformers/: ordinal_encoder_final.joblib  scaler_final.joblib
notebooks/: Ayush_Gupta_24703860_all-models.ipynb  Bajaj_Sidhant-25246568_Data_Transformation.ipynb  Bajaj_Sidhant-25246568_Decision_Tree_Model.ipynb  Bajaj_Sidhant-25246568_EDA.ipynb  Bajaj_Sidhant-25246568_Model_Picking.ipynb  Bajaj_Sidhant-25246568_XGBoost_Model.ipynb  Hegde_Roy-24667610-Random_Forest_Regression.ipynb  Thuso_24667610-XGB_24542250.ipynb  Thuso_Dube_AdaBoost.ipynb  Untitled.ipynb  data transformations.ipynb  eda.ipynb
pkg_24542250/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
pkg_24542250/docs/: Makefile  conf.py  example.ipynb  make.bat
pkg_24542250/src/pkg_24542250/: __init__.py
pkg_24542250/tests/: test_pkg_24542250.py
src/functions/: encode_data.py  evaluate_model.py  load_and_preprocess_data.py  main_pipeline.py  save_model_and_encoders.py  split_data.py  train_model.py
