[tool.poetry]
name = "at3-model-experimentation"
version = "0.1.0"
description = ""
authors = ["Sidhant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
isodate = "^0.7.2"
xgboost = "^2.1.2"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
category-encoders = "^2.6.4"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"