[tool.poetry]
name = "at3-model-experimentation"
version = "0.1.0"
description = ""
authors = ["Sidhant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
