[tool.poetry]
name = "pkg_24542250"
version = "0.1.0"
description = "Assignment 3 package for data transformations & engineering 24542250[D"
authors = ["Thuso"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
